Revision history for Perl module URI::ParseSearchString::More

0.12 2009-07-22
    - Now requires version 1.33 of WWW::Mechanize::Cached as this release
	  fixes the CODE items error
	- Added bing.com to engines
	- Added fastbrowsersearch.com to engines
	- Now requires Data::Dump rather than Data::Dumper

0.11 2009-07-09
    - Wrapped $mech->get in an eval in order to get by the following cryptic
      error message:
      Can't store CODE items at ../../lib/Storable.pm
      (autosplit into ../../lib/auto/Storable/_freeze.al) line 290,
      at /usr/local/share/perl/5.8.7/WWW/Mechanize/Cached.pm line 118
    - have disabled AOL tests in t/005_parse_more.t because AOL is currently
      blocking me and URI::ParseSearchString doesn't return the correct
      data

0.10 2008-11-20
    - Added search.incredimail.com to engines
    - Added search.rogers.com to engines
    - Added search.rr.com to engines
    - Added searchservice.myspace.com to engines
    - moved dogpile tests to extended url tests
    - Added yandex.ru to engines
    - Added youtube.com to engines

0.09 2008-10-30
    - Moved googlesyndication.com tests as they were causing
      failing test reports.  Some of these tests are tricky
      as we can't reliably predict that these URLs will
      always be available. They are now in t/006_extended.t
      and must be explicitly enabled.

0.08 2008-10-29
    - Fixed license in Makefile as it never actually made it into 0.07
    - Caching is now disabled by default
    - Fixed bug with escaped single quotes in search strings
    - Added set_cached() and get_cached() methods
    - Updated get_mech() to return either a WWW::Mechanize or
      WWW::Mechanize::Cached object, depending on the return value of
      get_cached()

0.07 2008-10-09
    - Added license to Makefile to improve Kwalitee

0.06 2008-10-09
    - Tweaked aol regex so that it doesn't flag urls in which
      aol is a referring url
    - Added googlesyndication as its own engine