@@ -4095,3 +4095,11 @@
   url = http://www.bing.com/search?q=myspace%20headline&first=71&FORM=PORE
   terms = myspace headline
 </urls>
+<urls>
+  url = http://answers.yahoo.com/question/index;_ylt=Al7fJtDUTm2S69bM0VvjPDIjzKIX?qid=20061214165004AADtB1I
+  terms = How can I track the IP address of visitors to my personal site?
+</urls>
+<urls>
+  url = http://images.google.com/images?hl=en&q=vile+richard&btnG=Search+Images&gbv=2&aq=f&oq=
+  terms = vile richard
+</urls>
